--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio | Welcome</title>
+    <title>My Portfolio | Welcome
+      <link rel="icon" href="/PP_Logo.png" />
+    </title>
     <meta name="description" content="Personal Portfolio Website" />
     <meta name="author" content="Portfolio Owner" />
+    <link rel="icon" href="/PP_Logo.png" />
 
     <meta property="og:title" content="My Portfolio" />
     <meta property="og:description" content="Welcome to my personal portfolio website" />
